--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       - "./mods:/opt/minecraft/mods"
       - "./world:/opt/minecraft/world"
       - "./server.properties:/opt/minecraft/server.properties"
+      - "./user_jvm_args.txt:/opt/minecraft/user_jvm_args.txt"
     restart: always
     pull_policy: always
