--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "./world:/opt/minecraft/world"
       - "./server.properties:/opt/minecraft/server.properties"
       - "./user_jvm_args.txt:/opt/minecraft/user_jvm_args.txt"
-      - "./config/fml.toml:/opt/minecraft/config/fml.toml"
+      - "./config:/opt/minecraft/config"
     restart: always
     pull_policy: always
     tty: true
